@@ -249,5 +249,4 @@ def test_main():
 
 
 if __name__ == "__main__":
-    support.use_resources = ['network']
     test_main()
